force-app/main/default/objects/GitHub_Pull_Request__c/GitHub_Pull_Request__c.object-meta.xml
<CustomObject>
    <label>GitHub Pull Request</label>
    <pluralLabel>GitHub Pull Requests</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>PR Number</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 