force-app/main/default/objects/GitHub_Pull_Request__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <label>Created By</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 