force-app/main/default/objects/GitHub_Pull_Request__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>open</fullName>
                <label>Open</label>
            </value>
            <value>
                <fullName>closed</fullName>
                <label>Closed</label>
            </value>
            <value>
                <fullName>merged</fullName>
                <label>Merged</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 