force-app/main/default/objects/GitHub_Pull_Request__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField> 